--- a/index.html
+++ b/index.html
@@ -28,6 +28,21 @@ READ THIS FOR SUCCESS IN LIFE AND THIS CODE CHALLENGE :: Copy and paste the code
   			width: 80%;
   			margin: 50px auto;
   		}
+    div.left {
+          width: 50%;
+          float: left;
+      }
+      div.right {
+          width: 50%;
+          float: right;
+      }
+       
+      div.clear {
+        clear: both;
+      }
+      img {
+   width: 100%;
+      }
   	</style>
 
   </head>
